# P38kernels2021

MerBench-HipMer-v0.9.6.3/: CMakeLists.txt  HIPMER_VERSION  README-Linux.md  README-MacOSX.md  README.md  _gitignore  _gitlab-ci.yml  bootstrap_hipmer_env.sh  hipmer_env.sh-EXAMPLE
MerBench-HipMer-v0.9.6.3/contrib/: SaveLatestToS3.sh  aws-setup.sh  install_upc.sh
MerBench-HipMer-v0.9.6.3/doc/: EmbeddingPerl.README
MerBench-HipMer-v0.9.6.3/gtest/: CMakeLists.txt
MerBench-HipMer-v0.9.6.3/src/: realpath.c
MerBench-HipMer-v0.9.6.3/test/: test_metagenome.sh
PICSARlite/: #README#  gmon.out  input_file.pixr  output_statistics.out  subroutines-names.txt
PICSARlite/src/: submain.F90
PICSARlite/src/diags/: diags.F90.180724  diags.F90~
PICSARlite/src/housekeeping/: load_balancing.F90.1807241605  load_balancing.F90~
PICSARlite/src/ios/: simple_io.F90.180725  simple_io.F90~
PICSARlite/src/particle_deposition/current_deposition/: current_deposition_manager_3d.F90  current_deposition_manager_3d.F90.1807251611  current_deposition_manager_3d.F90~
PICSARlite/src/particle_deposition/current_deposition/direct/: direct_current_deposition_3d.F90
fft-baseline/: Makefile  P38 FFT Benchmark Baseline.xlsx  P38 cuFFT Baseline.xlsx  com-oop-hsw-benchfft.cpp
mtc/: Makefile  cmdline_arguments.f90  mtc.f90  mtc_config.f90  mtc_main.f90  mtc_patch.f90  string.f90  string_converter.f90
